--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if (window.location.hash === '#demo') {
+        window.location.hash = '#automergeUrl=automerge%3A3fYAVYQEQE7nmLyJpVnKQ5e5eTaL'
+      }
+    </script>
   </body>
 </html>
