--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      if (window.location.hash === '#demo') {
+      if (window.location.hash?.startsWith('#demo')) {
         window.location.hash = '#automergeUrl=automerge%3A3fYAVYQEQE7nmLyJpVnKQ5e5eTaL'
       }
     </script>
