fix: upgrade dependencies and switch to Biome

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="bg-stone-300">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
+      console.log('Hi!', window.location.hash)
       if (window.location.hash?.startsWith('#demo')) {
         window.location.hash = '#automergeUrl=automerge%3A3fYAVYQEQE7nmLyJpVnKQ5e5eTaL'
       }
